@@ -1,3 +1,9 @@
+ags (0.7.48)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed restart soundcard playback as doing ags_apply_presets_launch()
+	* implemented AgsNote in AgsAudioSignal
+
 ags (0.7.47)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
